# Client

./: CMakeLists.txt  makefile
include/: ClientToServer.h  ServerToClient.h  clientToServer.h
src/: Client.cpp  ClientToServer.cpp  ConnectionHandler.cpp  ServerToClient.cpp  clientToServer.cpp  serverToClient.cpp
